// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser("# *Italic heading* with *italic text*") .next() .render() 1`] = `"[h1][i]Italic heading[/i] with [i]italic text[/i][/h1]"`;

exports[`Parser("# *Italic heading* with *italic text*") .next() snapshot 1`] = `
Heading {
  "content": "*Italic heading* with *italic text*",
  "level": 1,
  "raw": "# *Italic heading* with *italic text*",
  "tokens": [
    Italics {
      "content": "Italic heading",
      "raw": "*Italic heading*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Italic heading",
          "raw": "Italic heading",
        },
      ],
    },
    InlineText {
      "content": " with ",
      "raw": " with ",
    },
    Italics {
      "content": "italic text",
      "raw": "*italic text*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "italic text",
          "raw": "italic text",
        },
      ],
    },
  ],
}
`;

exports[`Parser("# *Italic heading*") .next() .render() 1`] = `"[h1][i]Italic heading[/i][/h1]"`;

exports[`Parser("# *Italic heading*") .next() snapshot 1`] = `
Heading {
  "content": "*Italic heading*",
  "level": 1,
  "raw": "# *Italic heading*",
  "tokens": [
    Italics {
      "content": "Italic heading",
      "raw": "*Italic heading*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Italic heading",
          "raw": "Italic heading",
        },
      ],
    },
  ],
}
`;

exports[`Parser("# *Partially* italic heading") .next() .render() 1`] = `"[h1][i]Partially[/i] italic heading[/h1]"`;

exports[`Parser("# *Partially* italic heading") .next() snapshot 1`] = `
Heading {
  "content": "*Partially* italic heading",
  "level": 1,
  "raw": "# *Partially* italic heading",
  "tokens": [
    Italics {
      "content": "Partially",
      "raw": "*Partially*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Partially",
          "raw": "Partially",
        },
      ],
    },
    InlineText {
      "content": " italic heading",
      "raw": " italic heading",
    },
  ],
}
`;

exports[`Parser("# _Italic heading_") .next() .render() 1`] = `"[h1][i]Italic heading[/i][/h1]"`;

exports[`Parser("# _Italic heading_") .next() snapshot 1`] = `
Heading {
  "content": "_Italic heading_",
  "level": 1,
  "raw": "# _Italic heading_",
  "tokens": [
    Italics {
      "content": "Italic heading",
      "raw": "_Italic heading_",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Italic heading",
          "raw": "Italic heading",
        },
      ],
    },
  ],
}
`;

exports[`Parser("# Heading 1
") .next() .render() 1`] = `"[h1]Heading 1[/h1]"`;

exports[`Parser("# Heading 1
") .next() snapshot 1`] = `
Heading {
  "content": "Heading 1",
  "level": 1,
  "raw": "# Heading 1
",
  "tokens": [
    InlineText {
      "content": "Heading 1",
      "raw": "Heading 1",
    },
  ],
}
`;

exports[`Parser("# Heading 1") .next() .render() 1`] = `"[h1]Heading 1[/h1]"`;

exports[`Parser("# Heading 1") .next() snapshot 1`] = `
Heading {
  "content": "Heading 1",
  "level": 1,
  "raw": "# Heading 1",
  "tokens": [
    InlineText {
      "content": "Heading 1",
      "raw": "Heading 1",
    },
  ],
}
`;

exports[`Parser("## Heading 2
") .next() .render() 1`] = `"[h2]Heading 2[/h2]"`;

exports[`Parser("## Heading 2
") .next() snapshot 1`] = `
Heading {
  "content": "Heading 2",
  "level": 2,
  "raw": "## Heading 2
",
  "tokens": [
    InlineText {
      "content": "Heading 2",
      "raw": "Heading 2",
    },
  ],
}
`;

exports[`Parser("## Heading 2") .next() .render() 1`] = `"[h2]Heading 2[/h2]"`;

exports[`Parser("## Heading 2") .next() snapshot 1`] = `
Heading {
  "content": "Heading 2",
  "level": 2,
  "raw": "## Heading 2",
  "tokens": [
    InlineText {
      "content": "Heading 2",
      "raw": "Heading 2",
    },
  ],
}
`;

exports[`Parser("### Heading 3
") .next() .render() 1`] = `"[h3]Heading 3[/h3]"`;

exports[`Parser("### Heading 3
") .next() snapshot 1`] = `
Heading {
  "content": "Heading 3",
  "level": 3,
  "raw": "### Heading 3
",
  "tokens": [
    InlineText {
      "content": "Heading 3",
      "raw": "Heading 3",
    },
  ],
}
`;

exports[`Parser("### Heading 3") .next() .render() 1`] = `"[h3]Heading 3[/h3]"`;

exports[`Parser("### Heading 3") .next() snapshot 1`] = `
Heading {
  "content": "Heading 3",
  "level": 3,
  "raw": "### Heading 3",
  "tokens": [
    InlineText {
      "content": "Heading 3",
      "raw": "Heading 3",
    },
  ],
}
`;

exports[`Parser("#### Heading 4
") .next() .render() 1`] = `"[h4]Heading 4[/h4]"`;

exports[`Parser("#### Heading 4
") .next() snapshot 1`] = `
Heading {
  "content": "Heading 4",
  "level": 4,
  "raw": "#### Heading 4
",
  "tokens": [
    InlineText {
      "content": "Heading 4",
      "raw": "Heading 4",
    },
  ],
}
`;

exports[`Parser("#### Heading 4") .next() .render() 1`] = `"[h4]Heading 4[/h4]"`;

exports[`Parser("#### Heading 4") .next() snapshot 1`] = `
Heading {
  "content": "Heading 4",
  "level": 4,
  "raw": "#### Heading 4",
  "tokens": [
    InlineText {
      "content": "Heading 4",
      "raw": "Heading 4",
    },
  ],
}
`;

exports[`Parser("##### Heading 5
") .next() .render() 1`] = `"[h5]Heading 5[/h5]"`;

exports[`Parser("##### Heading 5
") .next() snapshot 1`] = `
Heading {
  "content": "Heading 5",
  "level": 5,
  "raw": "##### Heading 5
",
  "tokens": [
    InlineText {
      "content": "Heading 5",
      "raw": "Heading 5",
    },
  ],
}
`;

exports[`Parser("##### Heading 5") .next() .render() 1`] = `"[h5]Heading 5[/h5]"`;

exports[`Parser("##### Heading 5") .next() snapshot 1`] = `
Heading {
  "content": "Heading 5",
  "level": 5,
  "raw": "##### Heading 5",
  "tokens": [
    InlineText {
      "content": "Heading 5",
      "raw": "Heading 5",
    },
  ],
}
`;

exports[`Parser("###### Heading 6
") .next() .render() 1`] = `"[h6]Heading 6[/h6]"`;

exports[`Parser("###### Heading 6
") .next() snapshot 1`] = `
Heading {
  "content": "Heading 6",
  "level": 6,
  "raw": "###### Heading 6
",
  "tokens": [
    InlineText {
      "content": "Heading 6",
      "raw": "Heading 6",
    },
  ],
}
`;

exports[`Parser("###### Heading 6") .next() .render() 1`] = `"[h6]Heading 6[/h6]"`;

exports[`Parser("###### Heading 6") .next() snapshot 1`] = `
Heading {
  "content": "Heading 6",
  "level": 6,
  "raw": "###### Heading 6",
  "tokens": [
    InlineText {
      "content": "Heading 6",
      "raw": "Heading 6",
    },
  ],
}
`;

exports[`Parser("**Bold paragraph**") .next() .render() 1`] = `
"[b]Bold paragraph[/b]

"
`;

exports[`Parser("**Bold paragraph**") .next() snapshot 1`] = `
Paragraph {
  "content": "**Bold paragraph**",
  "raw": "**Bold paragraph**",
  "tokens": [
    Bold {
      "content": "Bold paragraph",
      "raw": "**Bold paragraph**",
      "tag": "b",
      "tokens": [
        InlineText {
          "content": "Bold paragraph",
          "raw": "Bold paragraph",
        },
      ],
    },
  ],
}
`;

exports[`Parser("**Paragraph with *nested italics***") .next() .render() 1`] = `
"[b]Paragraph with [i]nested italics[/i][/b]

"
`;

exports[`Parser("**Paragraph with *nested italics***") .next() snapshot 1`] = `
Paragraph {
  "content": "**Paragraph with *nested italics***",
  "raw": "**Paragraph with *nested italics***",
  "tokens": [
    Bold {
      "content": "Paragraph with *nested italics*",
      "raw": "**Paragraph with *nested italics***",
      "tag": "b",
      "tokens": [
        InlineText {
          "content": "Paragraph with ",
          "raw": "Paragraph with ",
        },
        Italics {
          "content": "nested italics",
          "raw": "*nested italics*",
          "tag": "i",
          "tokens": [
            InlineText {
              "content": "nested italics",
              "raw": "nested italics",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Parser("**Paragraph with *nested* italics**") .next() .render() 1`] = `
"[b]Paragraph with [i]nested[/i] italics[/b]

"
`;

exports[`Parser("**Paragraph with *nested* italics**") .next() snapshot 1`] = `
Paragraph {
  "content": "**Paragraph with *nested* italics**",
  "raw": "**Paragraph with *nested* italics**",
  "tokens": [
    Bold {
      "content": "Paragraph with *nested* italics",
      "raw": "**Paragraph with *nested* italics**",
      "tag": "b",
      "tokens": [
        InlineText {
          "content": "Paragraph with ",
          "raw": "Paragraph with ",
        },
        Italics {
          "content": "nested",
          "raw": "*nested*",
          "tag": "i",
          "tokens": [
            InlineText {
              "content": "nested",
              "raw": "nested",
            },
          ],
        },
        InlineText {
          "content": " italics",
          "raw": " italics",
        },
      ],
    },
  ],
}
`;

exports[`Parser("*\`styled inline code\`*") .next() .render() 1`] = `
"[i][code]styled inline code[/code][/i]

"
`;

exports[`Parser("*\`styled inline code\`*") .next() snapshot 1`] = `
Paragraph {
  "content": "*\`styled inline code\`*",
  "raw": "*\`styled inline code\`*",
  "tokens": [
    Italics {
      "content": "\`styled inline code\`",
      "raw": "*\`styled inline code\`*",
      "tag": "i",
      "tokens": [
        InlineCode {
          "content": "styled inline code",
          "raw": "\`styled inline code\`",
          "tag": "code",
          "tokens": [
            InlineText {
              "content": "styled inline code",
              "raw": "styled inline code",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Parser("*{{{styled inline noparse}}}*") .next() .render() 1`] = `
"[i][noparse]styled inline noparse[/noparse][/i]

"
`;

exports[`Parser("*{{{styled inline noparse}}}*") .next() snapshot 1`] = `
Paragraph {
  "content": "*{{{styled inline noparse}}}*",
  "raw": "*{{{styled inline noparse}}}*",
  "tokens": [
    Italics {
      "content": "{{{styled inline noparse}}}",
      "raw": "*{{{styled inline noparse}}}*",
      "tag": "i",
      "tokens": [
        InlineNoparse {
          "content": "styled inline noparse",
          "raw": "{{{styled inline noparse}}}",
          "tag": "noparse",
          "tokens": [
            InlineText {
              "content": "styled inline noparse",
              "raw": "styled inline noparse",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Parser("*Italic paragraph* with *italic text*") .next() .render() 1`] = `
"[i]Italic paragraph[/i] with [i]italic text[/i]

"
`;

exports[`Parser("*Italic paragraph* with *italic text*") .next() snapshot 1`] = `
Paragraph {
  "content": "*Italic paragraph* with *italic text*",
  "raw": "*Italic paragraph* with *italic text*",
  "tokens": [
    Italics {
      "content": "Italic paragraph",
      "raw": "*Italic paragraph*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Italic paragraph",
          "raw": "Italic paragraph",
        },
      ],
    },
    InlineText {
      "content": " with ",
      "raw": " with ",
    },
    Italics {
      "content": "italic text",
      "raw": "*italic text*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "italic text",
          "raw": "italic text",
        },
      ],
    },
  ],
}
`;

exports[`Parser("*Italic paragraph*") .next() .render() 1`] = `
"[i]Italic paragraph[/i]

"
`;

exports[`Parser("*Italic paragraph*") .next() snapshot 1`] = `
Paragraph {
  "content": "*Italic paragraph*",
  "raw": "*Italic paragraph*",
  "tokens": [
    Italics {
      "content": "Italic paragraph",
      "raw": "*Italic paragraph*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Italic paragraph",
          "raw": "Italic paragraph",
        },
      ],
    },
  ],
}
`;

exports[`Parser("*Paragraph with **nested bold***") .next() .render() 1`] = `
"[i]Paragraph with [b]nested bold[/b][/i]

"
`;

exports[`Parser("*Paragraph with **nested bold***") .next() snapshot 1`] = `
Paragraph {
  "content": "*Paragraph with **nested bold***",
  "raw": "*Paragraph with **nested bold***",
  "tokens": [
    Italics {
      "content": "Paragraph with **nested bold**",
      "raw": "*Paragraph with **nested bold***",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Paragraph with ",
          "raw": "Paragraph with ",
        },
        Bold {
          "content": "nested bold",
          "raw": "**nested bold**",
          "tag": "b",
          "tokens": [
            InlineText {
              "content": "nested bold",
              "raw": "nested bold",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Parser("*Paragraph with **nested** bold*") .next() .render() 1`] = `
"[i]Paragraph with [b]nested[/b] bold[/i]

"
`;

exports[`Parser("*Paragraph with **nested** bold*") .next() snapshot 1`] = `
Paragraph {
  "content": "*Paragraph with **nested** bold*",
  "raw": "*Paragraph with **nested** bold*",
  "tokens": [
    Italics {
      "content": "Paragraph with **nested** bold",
      "raw": "*Paragraph with **nested** bold*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Paragraph with ",
          "raw": "Paragraph with ",
        },
        Bold {
          "content": "nested",
          "raw": "**nested**",
          "tag": "b",
          "tokens": [
            InlineText {
              "content": "nested",
              "raw": "nested",
            },
          ],
        },
        InlineText {
          "content": " bold",
          "raw": " bold",
        },
      ],
    },
  ],
}
`;

exports[`Parser("*Partially* italic paragraph") .next() .render() 1`] = `
"[i]Partially[/i] italic paragraph

"
`;

exports[`Parser("*Partially* italic paragraph") .next() snapshot 1`] = `
Paragraph {
  "content": "*Partially* italic paragraph",
  "raw": "*Partially* italic paragraph",
  "tokens": [
    Italics {
      "content": "Partially",
      "raw": "*Partially*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Partially",
          "raw": "Partially",
        },
      ],
    },
    InlineText {
      "content": " italic paragraph",
      "raw": " italic paragraph",
    },
  ],
}
`;

exports[`Parser("__***all*** the things__") .next() .render() 1`] = `
"[u][b][i]all[/i][/b] the things[/u]

"
`;

exports[`Parser("__***all*** the things__") .next() snapshot 1`] = `
Paragraph {
  "content": "__***all*** the things__",
  "raw": "__***all*** the things__",
  "tokens": [
    Underline {
      "content": "***all*** the things",
      "raw": "__***all*** the things__",
      "tag": "u",
      "tokens": [
        Bold {
          "content": "*all*",
          "raw": "***all***",
          "tag": "b",
          "tokens": [
            Italics {
              "content": "all",
              "raw": "*all*",
              "tag": "i",
              "tokens": [
                InlineText {
                  "content": "all",
                  "raw": "all",
                },
              ],
            },
          ],
        },
        InlineText {
          "content": " the things",
          "raw": " the things",
        },
      ],
    },
  ],
}
`;

exports[`Parser("___Underline with italics___") .next() .render() 1`] = `
"[u][i]Underline with italics[/i][/u]

"
`;

exports[`Parser("___Underline with italics___") .next() snapshot 1`] = `
Paragraph {
  "content": "___Underline with italics___",
  "raw": "___Underline with italics___",
  "tokens": [
    Underline {
      "content": "_Underline with italics_",
      "raw": "___Underline with italics___",
      "tag": "u",
      "tokens": [
        Italics {
          "content": "Underline with italics",
          "raw": "_Underline with italics_",
          "tag": "i",
          "tokens": [
            InlineText {
              "content": "Underline with italics",
              "raw": "Underline with italics",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`Parser("__Underlined paragraph__") .next() .render() 1`] = `
"[u]Underlined paragraph[/u]

"
`;

exports[`Parser("__Underlined paragraph__") .next() snapshot 1`] = `
Paragraph {
  "content": "__Underlined paragraph__",
  "raw": "__Underlined paragraph__",
  "tokens": [
    Underline {
      "content": "Underlined paragraph",
      "raw": "__Underlined paragraph__",
      "tag": "u",
      "tokens": [
        InlineText {
          "content": "Underlined paragraph",
          "raw": "Underlined paragraph",
        },
      ],
    },
  ],
}
`;

exports[`Parser("_Italic paragraph_") .next() .render() 1`] = `
"[i]Italic paragraph[/i]

"
`;

exports[`Parser("_Italic paragraph_") .next() snapshot 1`] = `
Paragraph {
  "content": "_Italic paragraph_",
  "raw": "_Italic paragraph_",
  "tokens": [
    Italics {
      "content": "Italic paragraph",
      "raw": "_Italic paragraph_",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "Italic paragraph",
          "raw": "Italic paragraph",
        },
      ],
    },
  ],
}
`;

exports[`Parser("\`inline code *with special syntax* inside\`") .next() .render() 1`] = `
"[code]inline code *with special syntax* inside[/code]

"
`;

exports[`Parser("\`inline code *with special syntax* inside\`") .next() snapshot 1`] = `
Paragraph {
  "content": "\`inline code *with special syntax* inside\`",
  "raw": "\`inline code *with special syntax* inside\`",
  "tokens": [
    InlineCode {
      "content": "inline code *with special syntax* inside",
      "raw": "\`inline code *with special syntax* inside\`",
      "tag": "code",
      "tokens": [
        InlineText {
          "content": "inline code *with special syntax* inside",
          "raw": "inline code *with special syntax* inside",
        },
      ],
    },
  ],
}
`;

exports[`Parser("\`inline code\`") .next() .render() 1`] = `
"[code]inline code[/code]

"
`;

exports[`Parser("\`inline code\`") .next() snapshot 1`] = `
Paragraph {
  "content": "\`inline code\`",
  "raw": "\`inline code\`",
  "tokens": [
    InlineCode {
      "content": "inline code",
      "raw": "\`inline code\`",
      "tag": "code",
      "tokens": [
        InlineText {
          "content": "inline code",
          "raw": "inline code",
        },
      ],
    },
  ],
}
`;

exports[`Parser("{{{inline noparse *with italics* inside}}}") .next() .render() 1`] = `
"[noparse]inline noparse *with italics* inside[/noparse]

"
`;

exports[`Parser("{{{inline noparse *with italics* inside}}}") .next() snapshot 1`] = `
Paragraph {
  "content": "{{{inline noparse *with italics* inside}}}",
  "raw": "{{{inline noparse *with italics* inside}}}",
  "tokens": [
    InlineNoparse {
      "content": "inline noparse *with italics* inside",
      "raw": "{{{inline noparse *with italics* inside}}}",
      "tag": "noparse",
      "tokens": [
        InlineText {
          "content": "inline noparse *with italics* inside",
          "raw": "inline noparse *with italics* inside",
        },
      ],
    },
  ],
}
`;

exports[`Parser("{{{inline noparse \`with inline code\` inside}}}") .next() .render() 1`] = `
"[noparse]inline noparse \`with inline code\` inside[/noparse]

"
`;

exports[`Parser("{{{inline noparse \`with inline code\` inside}}}") .next() snapshot 1`] = `
Paragraph {
  "content": "{{{inline noparse \`with inline code\` inside}}}",
  "raw": "{{{inline noparse \`with inline code\` inside}}}",
  "tokens": [
    InlineNoparse {
      "content": "inline noparse \`with inline code\` inside",
      "raw": "{{{inline noparse \`with inline code\` inside}}}",
      "tag": "noparse",
      "tokens": [
        InlineText {
          "content": "inline noparse \`with inline code\` inside",
          "raw": "inline noparse \`with inline code\` inside",
        },
      ],
    },
  ],
}
`;

exports[`Parser("{{{inline noparse with [block] inside}}}") .next() .render() 1`] = `
"[noparse]inline noparse with [block] inside[/noparse]

"
`;

exports[`Parser("{{{inline noparse with [block] inside}}}") .next() snapshot 1`] = `
Paragraph {
  "content": "{{{inline noparse with [block] inside}}}",
  "raw": "{{{inline noparse with [block] inside}}}",
  "tokens": [
    InlineNoparse {
      "content": "inline noparse with [block] inside",
      "raw": "{{{inline noparse with [block] inside}}}",
      "tag": "noparse",
      "tokens": [
        InlineText {
          "content": "inline noparse with [block] inside",
          "raw": "inline noparse with [block] inside",
        },
      ],
    },
  ],
}
`;

exports[`Parser("{{{inline noparse}}}") .next() .render() 1`] = `
"[noparse]inline noparse[/noparse]

"
`;

exports[`Parser("{{{inline noparse}}}") .next() snapshot 1`] = `
Paragraph {
  "content": "{{{inline noparse}}}",
  "raw": "{{{inline noparse}}}",
  "tokens": [
    InlineNoparse {
      "content": "inline noparse",
      "raw": "{{{inline noparse}}}",
      "tag": "noparse",
      "tokens": [
        InlineText {
          "content": "inline noparse",
          "raw": "inline noparse",
        },
      ],
    },
  ],
}
`;

exports[`Parser("Emphasized l*e*tter") .next() .render() 1`] = `
"Emphasized l[i]e[/i]tter

"
`;

exports[`Parser("Emphasized l*e*tter") .next() snapshot 1`] = `
Paragraph {
  "content": "Emphasized l*e*tter",
  "raw": "Emphasized l*e*tter",
  "tokens": [
    InlineText {
      "content": "Emphasized l",
      "raw": "Emphasized l",
    },
    Italics {
      "content": "e",
      "raw": "*e*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "e",
          "raw": "e",
        },
      ],
    },
    InlineText {
      "content": "tter",
      "raw": "tter",
    },
  ],
}
`;

exports[`Parser("Paragraph with **bold tail**") .next() .render() 1`] = `
"Paragraph with [b]bold tail[/b]

"
`;

exports[`Parser("Paragraph with **bold tail**") .next() snapshot 1`] = `
Paragraph {
  "content": "Paragraph with **bold tail**",
  "raw": "Paragraph with **bold tail**",
  "tokens": [
    InlineText {
      "content": "Paragraph with ",
      "raw": "Paragraph with ",
    },
    Bold {
      "content": "bold tail",
      "raw": "**bold tail**",
      "tag": "b",
      "tokens": [
        InlineText {
          "content": "bold tail",
          "raw": "bold tail",
        },
      ],
    },
  ],
}
`;

exports[`Parser("Paragraph with *italic tail*") .next() .render() 1`] = `
"Paragraph with [i]italic tail[/i]

"
`;

exports[`Parser("Paragraph with *italic tail*") .next() snapshot 1`] = `
Paragraph {
  "content": "Paragraph with *italic tail*",
  "raw": "Paragraph with *italic tail*",
  "tokens": [
    InlineText {
      "content": "Paragraph with ",
      "raw": "Paragraph with ",
    },
    Italics {
      "content": "italic tail",
      "raw": "*italic tail*",
      "tag": "i",
      "tokens": [
        InlineText {
          "content": "italic tail",
          "raw": "italic tail",
        },
      ],
    },
  ],
}
`;

exports[`Parser("Really emphasized l***e***tter") .next() .render() 1`] = `
"Really emphasized l[b][i]e[/i][/b]tter

"
`;

exports[`Parser("Really emphasized l***e***tter") .next() snapshot 1`] = `
Paragraph {
  "content": "Really emphasized l***e***tter",
  "raw": "Really emphasized l***e***tter",
  "tokens": [
    InlineText {
      "content": "Really emphasized l",
      "raw": "Really emphasized l",
    },
    Bold {
      "content": "*e*",
      "raw": "***e***",
      "tag": "b",
      "tokens": [
        Italics {
          "content": "e",
          "raw": "*e*",
          "tag": "i",
          "tokens": [
            InlineText {
              "content": "e",
              "raw": "e",
            },
          ],
        },
      ],
    },
    InlineText {
      "content": "tter",
      "raw": "tter",
    },
  ],
}
`;

exports[`Parser("simple paragraph") .next() .render() 1`] = `
"simple paragraph

"
`;

exports[`Parser("simple paragraph") .next() snapshot 1`] = `
Paragraph {
  "content": "simple paragraph",
  "raw": "simple paragraph",
  "tokens": [
    InlineText {
      "content": "simple paragraph",
      "raw": "simple paragraph",
    },
  ],
}
`;
